@@ -6,5 +6,5 @@ build-backend = "sipbuild.api"
 
 [tool.sip.metadata]
 name = "QTermWidget"
-version = "1.2.0"
+version = "1.3.0"
 requires-dist = ["PyQt5"]
